[package]
name = "golem-wasi-http"
version = "0.0.0"
description = "HTTP client library for WASI-HTTP"
keywords = ["http", "request", "client", "wasi"]
categories = ["web-programming::http-client", "wasm"]
repository = "https://github.com/golemcloud/golem-wasi-http"
documentation = "https://docs.rs/golem-wasi-http"
authors = ["Daniel Vigovszky <me@vigoo.dev>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
autotests = true

[features]
default = []

json = ["dep:serde_json"]
multipart = ["dep:mime_guess", "dep:rand"]
async = [
    "dep:wstd",
    "dep:async-iterator",
    "dep:futures-concurrency",
    "dep:futures",
]

[dependencies]
base64 = "0.22"
bytes = "1.2"
encoding_rs = "0.8"
http = "1"
mime = "0.3.16"
percent-encoding = "2.1"
serde = "1.0"
serde_urlencoded = "0.7.1"
url = "2.4"
wasip2 = "1.0.2"

## async
async-iterator = { version = "2.3.0", optional = true }
futures = { version = "0.3.31", optional = true }
futures-concurrency = { version = "7.6.3", optional = true }
wstd = { version = "0.6.5", optional = true }

## json
serde_json = { version = "1.0", optional = true }

## multipart
mime_guess = { version = "2.0", default-features = false, optional = true }
rand = { version = "0.9.1", optional = true }

[dev-dependencies]
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
num_cpus = "1.0"
libc = "0"
